# react-django-form-builder

./: README.md  manage.py
backend/: .gitignore  pyproject.toml
backend/form_builder/: models.py
backend/form_builder/migrations/: 0001_initial.py  0002_auto_20211118_1026.py
backend/forms_api/: serializers.py  urls.py  viewsets.py
backend/project/: asgi.py  settings.py  urls.py  wsgi.py
django_form_builder/: asgi.py  settings.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: agent.js  index.js
frontend/src/components/: App.js  Editor.js  Header.js
frontend/src/components/Home/: MainView.js  index.js
frontend/src/reducers/: home.js
frontend/src/store/: actionTypes.js  reducer.js  store.js
